syntax = "proto3";
package towerdefence.cc.service.server_discovery;

option java_package = "cc.towerdefence.api.service";
option java_outer_classname = "ServerDiscoveryProto";
option go_package = "service/server_discovery";

import "google/protobuf/empty.proto";

service ServerDiscovery {
  rpc GetSuggestedLobbyServer(ServerRequest) returns (LobbyServer);
  rpc GetSuggestedOtpServer(google.protobuf.Empty) returns (ConnectableServer);
  rpc GetSuggestedTowerDefenceServer(TowerDefenceServerRequest) returns (ConnectableServer);
}

message ServerRequest {
  int64 player_count = 1;
  optional bool ensure_same_server = 2;
}

message TowerDefenceServerRequest {
  int64 player_count = 1;
  bool in_progress = 2;
}

message ConnectableServer {
  string id = 1;
  string address = 2;
  uint32 port = 3;
}

message LobbyServer {
  ConnectableServer connectable_server = 1;
  //  uint32 number = 2; // Lobby #x - currently not assigned
}
